<resources>
    <string name="app_name">Pharmacy App</string>
    <string name="username">Username:</string>
    <string name="my_profile">My Profile</string>
    <string name="user_id">User ID:</string>
    <string name="email">Email:</string>
    <string name="log_out">Log Out</string>

    <!-- Splash Screen -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Register Screen-->
    <string name="email_input_hint">Please type your e-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_input_hint">Please type your password</string>
    <string name="create_account">Create Account</string>
    <string name="register_error_message">User has not been created. Try again</string>
    <string name="register_password_error_message">Your passwords do not match.</string>

    <!-- Login Screen-->
    <string name="login_error_message">Wrong Credentials. Try again</string>


    <!-- Product Details Screen-->
    <string name="product_details">Product Details</string>
    <string name="remove_button_text">Remove from Cart</string>
    <string name="add_button_text">Add to Cart</string>
    <string name="add_snackbar_text">The product was added to cart successfully!</string>
    <string name="remove_snackbar_text">The product was removed from cart successfully!</string>


    <!-- Profile Screen-->
    <string name="edit_username">Edit Username</string>
    <string name="profile_error_message">User details not found.</string>


    <!-- Dashboard Screen-->
    <string name="dashboard">Dashboard</string>
    <string name="cart">Cart</string>
    <string name="welcome">Welcome,</string>
    <string name="products">Products</string>
    <string name="user_error_message">User not found</string>
    <string name="products_error_message">Products not found</string>

    <!-- Cart Screen-->
    <string name="my_cart">My Cart</string>
    <string name="order">Order</string>

    <!-- Edit Username Screen-->
    <string name="username_description">Please enter the new Username</string>
    <string name="username_input_hint">Username</string>
    <string name="edit_username_btn">Save</string>
    <string name="my_orders_btn">My Orders</string>
    <string name="edit_username_snackbar_save">Your new username was saved successfully</string>
    <string name="edit_username_snackbar_error_message">An error occured. Please try again.</string>

    <!-- Order Adress Screen-->
    <string name="order_title_name">My Orders</string>
    <string name="order_full_name">Full Name</string>
    <string name="order_address">Address</string>
    <string name="order_city">City</string>
    <string name="order_postal_code">Postal Code</string>
    <string name="order_phone_number">Phone Number</string>
    <string name="order_continue_btn">Continue</string>

    <!-- Order Adress Screen-->
    <string name="order_details_title">Order Details</string>



</resources>