<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_24"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/loginTxtView"
            style="@style/headline_1_bold_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:gravity="center_horizontal"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/email"
            android:textSize="@dimen/text_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTxtView" />

        <EditText
            android:id="@+id/emailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_54"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTxtView" />

        <TextView
            android:id="@+id/passwordTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/password"
            android:textSize="@dimen/text_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditTxt" />

        <EditText
            android:id="@+id/passwordEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_54"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTxtView" />

        <Button
            android:id="@+id/loginAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginBottom="@dimen/dimen_32"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>