<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.splash.SplashActivity">

        <ImageView
            android:id="@+id/splashImgView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginTop="@dimen/dimen_100"
            android:src="@drawable/pharmacy_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/splashTxtView"
            style="@style/headline_1_bold_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splashImgView" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginBottom="@dimen/dimen_12"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/registerBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginBottom="@dimen/dimen_42"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>