<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.ckaradimitriou.pharmacyapp.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DashboardActivity">

        <TextView
            android:id="@+id/cartTitleTxtView"
            style="@style/headline_2_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:text="@string/dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cartImgView"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_20"
            android:src="@drawable/cart_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cart"
            app:layout_constraintEnd_toEndOf="@id/cartImgView"
            app:layout_constraintStart_toStartOf="@id/cartImgView"
            app:layout_constraintTop_toBottomOf="@+id/cartImgView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImgView"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="@dimen/dimen_80"
            android:layout_margin="@dimen/dimen_20"
            android:setUserImage="@{user.userImg}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cartTxtView"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/greetingTxtView"
            style="@style/headline_2_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:text="@string/welcome"
            app:layout_constraintStart_toEndOf="@id/userImgView"
            app:layout_constraintTop_toTopOf="@id/userImgView" />

        <TextView
            android:id="@+id/usernameTxtView"
            style="@style/headline_4_italic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10"
            android:setUserInfo="@{user.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/greetingTxtView"
            app:layout_constraintTop_toBottomOf="@id/greetingTxtView"
            tools:text="username" />

        <TextView
            android:id="@+id/productsTitleTxtView"
            style="@style/headline_4_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/products"
            app:layout_constraintStart_toStartOf="@id/userImgView"
            app:layout_constraintTop_toBottomOf="@id/userImgView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_8"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productsTitleTxtView"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>